About and Development started

--- a/content/en/about/_index.html
+++ b/content/en/about/_index.html
@@ -1,5 +1,5 @@
 ---
-title: About Goldydocs
+title: About occt.nim
 linkTitle: About
 menu:
   main:
@@ -8,21 +8,21 @@ menu:
 ---
 
 
-{{< blocks/cover title="About Goldydocs" image_anchor="bottom" height="min" >}}
+{{< blocks/cover title="About occt.nim" image_anchor="bottom" height="min" >}}
 
-<p class="lead mt-5">A sample site using the Docsy Hugo theme.
+<p class="lead mt-5">This is an attempt to create bindings for the Nim programming language.
 </p>
 
 {{< /blocks/cover >}}
 
 {{% blocks/lead %}}
-Goldydocs is a sample site using the <a href="https://github.com/google/docsy">Docsy</a> Hugo theme that shows what it can do and provides you with a template site structure. It’s designed for you to clone and edit as much as you like. See the different sections of the documentation and site for more ideas.
+<a href="https://github.com/mantielero/occt.nim">occt.nim/a> aims to provide bindings for the Nim programming language and it adds a layer which simplifies the usage. It is currently in the early stages (just some basic examples working) but it is capable to export STEP files already.
 {{% /blocks/lead %}}
 
 
 {{< blocks/section >}}
 <div class="col-12">
-<h1 class="text-center">This is another section</h1>
+<h1 class="text-center">This wrapping process has been done thanks to c2nim. Some experiments where done with cinterop. In the future, hcparse could be explored also.</h1>
 </div>
 
 {{< /blocks/section >}}
@@ -32,7 +32,7 @@ Goldydocs is a sample site using the <a href="https://github.com/google/docsy">D
 {{< blocks/section >}}
 
 <div class="col-12">
-<h1 class="text-center">This is another section</h1>
+<h1 class="text-center">The simplification layer is still very small.</h1>
 </div>
 
 {{< /blocks/section >}}
