--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,7 +4,7 @@ linkTitle = "occt.nim"
 
 +++
 
-{{< blocks/cover title="Welcome to occt.nim: an Open Cascade bindings for the Nim programming language" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="occt.nim: OpenCascade's bindings for the Nim programming language" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -12,16 +12,16 @@ linkTitle = "occt.nim"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/google/docsy-example">
 		Download <i class="fab fa-github ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
+	<p class="lead mt-5">Your CAD from Nim</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
 
 
 {{% blocks/lead color="primary" %}}
-Goldydocs provides a single web UI providing visibility into porridge temperature, chair size, and bed softness metrics! You can even find out who's been eating **your** porridge.
+OpenCASCADE is an open-source 3D CAD/CAM/CAE software development platform used for the modeling and simulation of complex mechanical systems.
 
-(Sadly, Goldydocs isn't a real project, but you can use this site as an example to create your own real websites with [Docsy](http://docsy.dev))
+With Nim, you can create code that looks like python but it generates C++ code that gets compiled.
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
